--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -19,7 +19,7 @@
 }
 
 .profile-card {
-  width: 38rem;
+  width: 30rem;
 }
 
 .profile-para-text {
